feat: update API version to 1.49.0
